--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Innspirovate Tech - Coming Soon</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -14,8 +14,8 @@
     
     body {
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #1E2022, #29323C);
-      color: #f5ebe0;
+      background: linear-gradient(135deg, #2D3436, #57606F);
+      color: #F4F4F4;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -24,66 +24,96 @@
 
     .coming-soon {
       text-align: center;
-      padding: 20px;
+      padding: 40px;
+      background-color: rgba(45, 52, 54, 0.8);
+      border-radius: 10px;
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+      max-width: 600px;
+      width: 100%;
     }
 
     .coming-soon h1 {
-      font-size: 3rem;
-      margin-bottom: 10px;
-      color: #f5ebe0;
+      font-size: 4rem;
+      margin-bottom: 20px;
+      color: #F4F4F4;
+      font-weight: 700;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
 
     .coming-soon h2 {
-      font-size: 1.5rem;
-      margin-bottom: 30px;
+      font-size: 2rem;
+      margin-bottom: 40px;
       font-weight: 400;
-      color: #637373;
+      color: #B2BEC3;
     }
 
     .coming-soon p {
-      font-size: 1rem;
-      color: #f5ebe0;
+      font-size: 1.2rem;
+      color: #F4F4F4;
+      margin-bottom: 30px;
     }
 
-    .coming-soon .email-input {
-      margin-top: 20px;
+    .phone-input {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 30px;
     }
 
-    .email-input input {
-      padding: 10px;
-      border-radius: 5px;
+    .phone-input input {
+      padding: 12px 16px;
+      border-radius: 5px 0 0 5px;
       border: none;
-      width: 300px;
+      width: 200px;
       font-size: 1rem;
-      margin-right: 10px;
+      background-color: #F4F4F4;
+      color: #2D3436;
     }
 
-    .email-input button {
-      padding: 10px 20px;
-      border-radius: 5px;
+    .phone-input button {
+      padding: 12px 24px;
+      border-radius: 0 5px 5px 0;
       border: none;
-      background-color: #152626;
-      color: #f5ebe0;
+      background-color: #0984E3;
+      color: #F4F4F4;
       font-size: 1rem;
       cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
     }
 
-    .email-input button:hover {
-      background-color: #f5ebe0;
-      color: #152626;
+    .phone-input button:hover {
+      background-color: #F4F4F4;
+      color: #0984E3;
+    }
+
+    @media (max-width: 480px) {
+      .coming-soon {
+        padding: 30px;
+      }
+
+      .coming-soon h1 {
+        font-size: 3rem;
+      }
+
+      .coming-soon h2 {
+        font-size: 1.5rem;
+      }
+
+      .coming-soon p {
+        font-size: 1rem;
+      }
+
+      .phone-input input {
+        width: 150px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="coming-soon">
     <h1>Innspirovate Tech</h1>
-    <h2>Innovate. Inspire. Create.</h2>
+    <h2>Inspire. Innovate. Iterate.</h2>
     <p>We're working hard to bring something amazing. Stay tuned!</p>
-    
-    <div class="email-input">
-      <input type="email" placeholder="Enter your email to get notified" />
-      <button>Notify Me</button>
-    </div>
   </div>
 </body>
 </html>
