--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       box-sizing: border-box;
     }
-    
+
     body {
       font-family: 'Poppins', sans-serif;
       background: linear-gradient(135deg, #FF7E5F, #feb47b, #6a11cb, #2575fc);
@@ -46,6 +46,11 @@
       width: 100%;
     }
 
+    .coming-soon img {
+      height: 10rem;
+      margin-bottom: 20px;
+    }
+
     .coming-soon h1 {
       font-size: 6rem;
       margin-bottom: 20px;
@@ -54,15 +59,8 @@
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     }
 
-    .coming-soon h2 {
-      font-size: 2rem;
-      margin-bottom: 40px;
-      font-weight: 400;
-      color: #F4F4F4;
-    }
-
     .coming-soon p {
-      font-size: 1.2rem;
+      font-size: 1.5rem;
       color: #F4F4F4;
       margin-bottom: 30px;
     }
@@ -105,16 +103,16 @@
         padding: 30px;
       }
 
+      .coming-soon img {
+        height: 4rem;
+      }
+
       .coming-soon h1 {
         font-size: 4rem;
       }
 
-      .coming-soon h2 {
-        font-size: 1.5rem;
-      }
-
       .coming-soon p {
-        font-size: 1rem;
+        font-size: 1.2rem;
       }
 
       .phone-input input {
@@ -125,9 +123,9 @@
 </head>
 <body>
   <div class="coming-soon">
+    <img src="LogoWithName-ForDarkBackground.svg" alt="Innspirovate Tech Logo">
     <h1>Coming Soon</h1>
-    <h2>Innspirovate Tech</h2>
-    <p>Inspire. Innovate. Iterate.</p>
+    <p>We're building something great. Stay tuned.</p>
   </div>
 </body>
 </html>
